--- a/challenges/index.html
+++ b/challenges/index.html
@@ -10,7 +10,7 @@
   <script src="arrays-callbacks.js"></script>
   <script src="closure.js"></script>
   <script src="prototypes.js"></script>
-  <!--<script src="classes.js"></script>-->
+  <script src="classes.js"></script>
 </head>
 
 <body>
